@@ -9,22 +9,6 @@
 ;;
 ;; This file is part of GNU Hyperbole.
 
-;; This file is distributed in the hope that it will be useful, but
-;; WITHOUT ANY WARRANTY.  No author or distributor accepts
-;; responsibility to anyone for the consequences of using it or for
-;; whether it serves any particular purpose or works at all, unless he
-;; says so in writing.  Refer to the GNU Emacs General Public License
-;; for full details. You should consider this code to be covered under
-;; the terms of the GPL.
-
-;; Everyone is granted permission to copy, modify and redistribute
-;; this file, but only under the conditions described in the GNU Emacs
-;; General Public License.  A copy of this license is supposed to have
-;; been given to you along with GNU Emacs so you can know your rights
-;; and responsibilities.  It should be in a file named COPYING.  Among
-;; other things, the copyright notice and this notice must be
-;; preserved on all copies.
-
 ;;; Commentary:
 ;;
 ;; Modified by Bob Weiner to allow selection of a set of files within a
